--- a/main.css
+++ b/main.css
@@ -141,6 +141,33 @@ button {
     position: absolute;
     top: 24px;
     right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.language__dropdown {
+    width: 70px;
+    border-radius: 5px;
+    margin-top: 5px;
+    background: #ffffff;
+    text-align: center;
+    display: none;
+}
+
+.dropdown--show {
+    display: block;
+}
+
+.dropdown__item {
+    list-style: none;
+    padding: 8px 0;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.dropdown__item:not(:first-child) {
+    border-top: 1px solid #efefef;
 }
 
 .language__title {
