--- a/main.css
+++ b/main.css
@@ -35,6 +35,12 @@ button {
     position: relative;
 }
 
+.header__toggle-language {
+    position: absolute;
+    top: 20px;
+    right: 0;
+}
+
 .header__logo {
     max-width: 350px;
     width: 100%;
@@ -135,39 +141,6 @@ button {
 .header__content {
     position: relative;
     z-index: 3;
-}
-
-.header__language {
-    position: absolute;
-    top: 24px;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-}
-
-.language__dropdown {
-    width: 70px;
-    border-radius: 5px;
-    margin-top: 5px;
-    background: #ffffff;
-    text-align: center;
-    display: none;
-}
-
-.dropdown--show {
-    display: block;
-}
-
-.dropdown__item {
-    list-style: none;
-    padding: 8px 0;
-    font-size: 14px;
-    cursor: pointer;
-}
-
-.dropdown__item:not(:first-child) {
-    border-top: 1px solid #efefef;
 }
 
 .language__title {
@@ -429,4 +402,195 @@ button {
     text-transform: uppercase;
     background: #30318c;
     color: #ffffff;
+}
+
+
+
+.dropdown {
+    position: relative;
+    top: 7px;
+    width: 50px;
+    height: 35px;
+}
+
+.dropdown__icon {
+    position: absolute;
+    z-index: 99;
+    top: 50%;
+    left: 8px;
+    transform: translateY(-50%);
+}
+
+.dropdown.active .dropdown__icon {
+    top: 43%;
+    transform: rotate(-180deg);
+}
+
+.dropdown input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    background: #fff;
+    font-size: 13px;
+    border: none;
+    outline: none;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+    padding-left: 22px;
+    border-radius: 6px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.dropdown .options {
+    position: absolute;
+    top: 40px;
+    width: 100%;
+    background: #fff;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+    border-radius: 10px;
+    overflow: hidden;
+    display: none;
+}
+
+.dropdown.active .options {
+    display: block;
+}
+
+.dropdown .options div {
+    padding: 6px 0;
+    text-align: center;
+    font-size: 13px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.dropdown .options div:hover {
+    background: #62baea;
+    color: #fff;
+}
+
+
+@media only screen and (max-width: 1200px) {
+    .container {
+        margin: 0 15px;
+    }
+
+    .header {
+        height: 710px;
+    }
+
+    .header__logo {
+        margin-top: 15px;
+    }
+
+    .header__btn {
+        margin-top: 155px;
+    }
+
+    .header__toggle-language {
+        top: 15px;
+    }
+
+
+    .get__title {
+        margin-top: 27px;
+    }
+
+    .get__block {
+        margin-top: 29px;
+    }
+
+    .get__images img {
+        margin-left: 15px;
+    }
+
+    .get__item-description {
+        margin-top: 18px;
+    }
+
+    .get__line--bottom {
+        margin-top: 20px;
+    }
+
+    .think__slider {
+        max-width: 730px;
+    }
+
+    .become-partner__block {
+        max-width: 540px;
+        justify-content: center;
+        flex-wrap: wrap;
+        margin: 78px auto 0;
+        column-gap: 30px;
+        row-gap: 55px;
+    }
+
+    .become-partner__btn {
+        margin-top: 32px;
+    }
+
+    .footer {
+        padding-top: 55px;
+    }
+}
+
+
+@media only screen and (max-width: 768px) {
+    .header {
+        height: 422px;
+    }
+
+    .header__logo {
+        max-width: 290px;
+        height: auto;
+        margin-top: 18px;
+    }
+
+    .header__description {
+        margin-top: 80px;
+        font-size: 24px;
+    }
+
+    .header__btn {
+        margin-top: 68px;
+    }
+
+    .header .swiper-pagination {
+        bottom: 16px;
+        justify-content: center;
+        transform: translateX(calc(-50% - 15px));
+    }
+
+
+    .get__line--top {
+        display: none;
+    }
+
+    .get__title {
+        margin-top: 20px;
+    }
+
+    .get__block {
+        margin-top: 0;
+    }
+
+    .get__images img {
+        position: relative;
+        left: -100px;
+    }
+
+    .get__item-title {
+        margin-top: 25px;
+    }
+
+    .get__item-description {
+        margin-top: 12px;
+    }
+
+    .get__items {
+        gap: 30px;
+    }
 }
