--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 :root {
-    --dark-blue: #2f318c
+    --dark-blue: #2f318c;
+    --white: #ffffff;
 }
 
 * {
@@ -14,6 +15,14 @@ body {
 
 button {
     cursor: pointer;
+    outline: none;
+}
+
+button:active {
+    opacity: .7;
+}
+
+input {
     outline: none;
 }
 
@@ -70,14 +79,14 @@ button {
 .header__btn {
     margin: 158px auto 0;
     border: 1px solid var(--dark-blue) !important;
-    background: #ffffff !important;
+    background: var(--white) !important;
     color: #30318c !important;
     transition: all .2s ease;
 }
 
 .header__btn:hover {
     background: #30318c !important;
-    color: #ffffff !important;
+    color: var(--white) !important;
 }
 
 .header__slider {
@@ -114,7 +123,7 @@ button {
     position: absolute;
     top: 0;
     left: 0;
-    background: -webkit-linear-gradient(left, #ffffff, transparent);
+    background: -webkit-linear-gradient(left, var(--white), transparent);
 }
 
 .header__slider .swiper-pagination {
@@ -129,7 +138,7 @@ button {
 .header__slider .swiper-pagination-bullet {
     width: 14px;
     height: 14px;
-    background: #ffffff;
+    background: var(--white);
     border: 1px solid var(--dark-blue);
     transition: background-color .2s ease;
     opacity: 1;
@@ -158,7 +167,7 @@ button {
     align-items: center;
     justify-content: center;
     border-radius: 6px;
-    background: #ffffff;
+    background: var(--white);
     cursor: pointer;
     padding-left: 15px;
     position: relative;
@@ -227,6 +236,7 @@ button {
 .get__item-description {
     font-size: 18px;
     margin-top: 15px;
+    color: #333333;
 }
 
 .get__item-image {
@@ -301,7 +311,7 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #ffffff;
+    background: var(--white);
     border: 1px solid #e0e0e0;
     border-radius: 20px;
 }
@@ -343,7 +353,7 @@ button {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background: #ffffff;
+    background: var(--white);
     border: 1px solid #d7d7d7;
     display: flex;
     align-items: center;
@@ -408,7 +418,7 @@ button {
     border-radius: 50px;
     text-transform: uppercase;
     background: #30318c;
-    color: #ffffff;
+    color: var(--white);
 }
 
 
@@ -706,4 +716,146 @@ button {
     .get__images img {
         left: -160px;
     }
+}
+
+
+.popup {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 99;
+}
+
+.popup__overlay {
+    width: 100%;
+    height: 100%;
+    background: var(--white);
+    opacity: .7;
+}
+
+.popup__container {
+    max-width: 540px;
+    width: 100%;
+    background: #f0f0f0;
+    position: absolute;
+    top: 6%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 999999;
+    border-radius: 20px;
+    padding: 36px;
+    box-shadow: 0 0 27px rgba(21, 22, 23, .3);
+}
+
+.feedback__popup-title {
+    font-size: 30px;
+    color: #30318c;
+    text-align: center;
+}
+
+.feedback__popup input[type=text], .feedback__popup select {
+    width: 100%;
+    height: 100%;
+    border: 1px solid #dddddd;
+    border-radius: 6px;
+    font-size: 18px;
+}
+
+.feedback__popup select {
+    padding: 0 7px;
+}
+
+.feedback__popup input {
+    padding: 0 10px;
+}
+
+.feedback__popup input[type=file] {
+    display: none;
+}
+
+.feedback__popup-form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 35px;
+}
+
+.form__field {
+    height: 50px;
+    position: relative;
+}
+
+.form__field-required::after {
+    content: '*';
+    position: absolute;
+    top: -5px;
+    right: -15px;
+    color: #993333;
+    font-size: 24px;
+}
+
+.form__field select {
+    width: 100%;
+}
+
+.form__upload-label {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 18px;
+}
+
+.form__upload-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 170px;
+    height: 45px;
+    font-size: 18px;
+    border: 1px solid #dddddd;
+    border-radius: 6px;
+    cursor: pointer;
+    background: -webkit-linear-gradient(top, #ffffff, transparent);
+}
+
+.feedback__popup-warning {
+    font-size: 14px;
+    color: #666666;
+    margin-top: 30px;
+}
+
+.feedback__popup-submit {
+    margin: 20px auto 0;
+}
+
+.feedback__popup-cancel {
+    position: absolute;
+    top: -40px;
+    right: -87px;
+    width: 57px;
+    height: 57px;
+    border-radius: 50%;
+    background: var(--white);
+    border: 0;
+    box-shadow: 0 0 25px rgba(219, 219, 219, .5);
+}
+
+.popup {
+    transition: opacity .4s ease;
+}
+
+.feedback__popup {
+    z-index: -1;
+    opacity: 0;
+}
+
+.feedback__popup--show {
+    z-index: 9999;
+    opacity: 1;
+}
+
+.popup__overlay {
+    cursor: pointer;
 }
