--- a/main.css
+++ b/main.css
@@ -490,6 +490,149 @@ input {
 }
 
 
+
+.popup {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 99;
+}
+
+.popup__overlay {
+    width: 100%;
+    height: 100%;
+    background: var(--white);
+    opacity: .7;
+}
+
+.popup__container {
+    max-width: 540px;
+    width: 100%;
+    background: #f0f0f0;
+    position: absolute;
+    top: 6%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 999;
+    border-radius: 20px;
+    padding: 36px;
+    box-shadow: 0 0 27px rgba(21, 22, 23, .3);
+}
+
+.feedback__popup-title {
+    font-size: 30px;
+    color: #30318c;
+    text-align: center;
+}
+
+.feedback__popup input[type=text], .feedback__popup select {
+    width: 100%;
+    height: 100%;
+    border: 1px solid #dddddd;
+    border-radius: 6px;
+    font-size: 18px;
+}
+
+.feedback__popup select {
+    padding: 0 7px;
+}
+
+.feedback__popup input {
+    padding: 0 10px;
+}
+
+.feedback__popup input[type=file] {
+    display: none;
+}
+
+.feedback__popup-form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 35px;
+}
+
+.form__field {
+    height: 50px;
+    position: relative;
+}
+
+.form__field-required::after {
+    content: '*';
+    position: absolute;
+    top: -5px;
+    right: -15px;
+    color: #993333;
+    font-size: 24px;
+}
+
+.form__field select {
+    width: 100%;
+}
+
+.form__upload-label {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 18px;
+}
+
+.form__upload-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 170px;
+    height: 45px;
+    font-size: 18px;
+    border: 1px solid #dddddd;
+    border-radius: 6px;
+    cursor: pointer;
+    background: -webkit-linear-gradient(top, #ffffff, transparent);
+}
+
+.feedback__popup-warning {
+    font-size: 14px;
+    color: #666666;
+    margin-top: 30px;
+}
+
+.feedback__popup-submit {
+    margin: 20px auto 0;
+}
+
+.feedback__popup-cancel {
+    position: absolute;
+    top: -40px;
+    right: -87px;
+    width: 57px;
+    height: 57px;
+    border-radius: 50%;
+    background: var(--white);
+    border: 0;
+    box-shadow: 0 0 25px rgba(219, 219, 219, .5);
+}
+
+.popup {
+    transition: opacity .4s ease;
+}
+
+.feedback__popup {
+    z-index: -1;
+    opacity: 0;
+}
+
+.feedback__popup--show {
+    z-index: 999;
+    opacity: 1;
+}
+
+.popup__overlay {
+    cursor: pointer;
+}
+
+
 @media only screen and (max-width: 1200px) {
     .container {
         margin: 0 15px;
@@ -698,9 +841,23 @@ input {
     .footer__container {
         align-items: center;
     }
+
+    .popup__container {
+        padding: 15px;
+    }
+
+    .form__upload-label, .form__upload-btn {
+        font-size: 14px;
+    }
+
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 460px) {
+    .header__logo {
+        max-width: 200px;
+        margin-top: 30px;
+    }
+
     .header__description {
         font-size: 20px;
     }
@@ -716,146 +873,5 @@ input {
     .get__images img {
         left: -160px;
     }
-}
 
-
-.popup {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 99;
-}
-
-.popup__overlay {
-    width: 100%;
-    height: 100%;
-    background: var(--white);
-    opacity: .7;
-}
-
-.popup__container {
-    max-width: 540px;
-    width: 100%;
-    background: #f0f0f0;
-    position: absolute;
-    top: 6%;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 999999;
-    border-radius: 20px;
-    padding: 36px;
-    box-shadow: 0 0 27px rgba(21, 22, 23, .3);
-}
-
-.feedback__popup-title {
-    font-size: 30px;
-    color: #30318c;
-    text-align: center;
-}
-
-.feedback__popup input[type=text], .feedback__popup select {
-    width: 100%;
-    height: 100%;
-    border: 1px solid #dddddd;
-    border-radius: 6px;
-    font-size: 18px;
-}
-
-.feedback__popup select {
-    padding: 0 7px;
-}
-
-.feedback__popup input {
-    padding: 0 10px;
-}
-
-.feedback__popup input[type=file] {
-    display: none;
-}
-
-.feedback__popup-form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-top: 35px;
-}
-
-.form__field {
-    height: 50px;
-    position: relative;
-}
-
-.form__field-required::after {
-    content: '*';
-    position: absolute;
-    top: -5px;
-    right: -15px;
-    color: #993333;
-    font-size: 24px;
-}
-
-.form__field select {
-    width: 100%;
-}
-
-.form__upload-label {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 18px;
-}
-
-.form__upload-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 170px;
-    height: 45px;
-    font-size: 18px;
-    border: 1px solid #dddddd;
-    border-radius: 6px;
-    cursor: pointer;
-    background: -webkit-linear-gradient(top, #ffffff, transparent);
-}
-
-.feedback__popup-warning {
-    font-size: 14px;
-    color: #666666;
-    margin-top: 30px;
-}
-
-.feedback__popup-submit {
-    margin: 20px auto 0;
-}
-
-.feedback__popup-cancel {
-    position: absolute;
-    top: -40px;
-    right: -87px;
-    width: 57px;
-    height: 57px;
-    border-radius: 50%;
-    background: var(--white);
-    border: 0;
-    box-shadow: 0 0 25px rgba(219, 219, 219, .5);
-}
-
-.popup {
-    transition: opacity .4s ease;
-}
-
-.feedback__popup {
-    z-index: -1;
-    opacity: 0;
-}
-
-.feedback__popup--show {
-    z-index: 9999;
-    opacity: 1;
-}
-
-.popup__overlay {
-    cursor: pointer;
 }
